# nyc-parcel-atm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cors.json  data.json  docker-compose.yml  fly.toml  pyproject.toml  startup.sh
.github/workflows/: fly.yml
backend/: .dockerignore  .gitignore  .pg_service.conf  Dockerfile  README.md  constants.py  fly.toml  jinja.py  main.py  manage.py  pyproject.toml
backend/data/: constants.py  converters.py  jinja.py  load.py  models.py  urls.py  views.py
backend/data/migrations/: 0001_initial.py  0002_alter_pluto02_address_alter_pluto02_areasource_and_more.py
backend/data/templates/html/: record_table.html.jinja
backend/data/templates/sql/: spatial_join.sql.jinja
backend/pluto_hist/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: get_layer_mappings.sh
backend/templates/: point_lookup.sql.jinja  receipt.html.jinja  receipt.sql.jinja  record_table.html.jinja  spatial_join.sql.jinja  spatial_join_2.sql.jinja  spatial_join_3.sql.jinja
eda/: change_over_time.ipynb  column_harmonization_2.ipynb  elt_prep.ipynb  extract_validation.ipynb  pyproject.toml
elt/: README.md  cli.py  create_json.py  create_tilesets.sh  drop-null-geoms.sh  full-pipeline.sh  get-columns.sh  pyproject.toml  union-shapefiles.sh  unzip-all.sh  zip-big-files.sh
elt/elt/: assets.py  constants.py  database.py  frontend.py  jinja.py  main.py
elt/elt/templates/: columns_to_rename.jinja  export_fgb.jinja  export_for_tiling.jinja  export_geojson_tippecannoe.jinja  rename_columns.jinja
elt/sh_scripts/: copy-all-to-s3.sh  full-pipeline.sh  ogrinfo-all.sh  union-shapefiles.sh  unzip-all.sh
pluto-hist/: README.md  about.html  choropleth.json  data.json  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
pluto-hist-react/: package-lock.json  package.json
pluto-hist-react/src/: App.jsx
pluto-hist/src/: about.html
