[tool.poetry]
name = "pluto-hist"
version = "0.1.0"
description = ""
authors = ["Raphael Paul Laude <raphlaude@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
