[tool.poetry]
name = "backend"
version = "0.1.1"
description = ""
authors = ["Raphael Paul Laude <raphlaude@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
jinja2 = "^3.1.3"
duckdb = "^0.10.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
pyproj = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
