[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "fastapi>=0.121.0",
    "geopandas>=1.1.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyogrio>=0.11.1",
    "pyproj>=3.7.2",
    "python-barcode>=0.16.1",
    "python-dotenv>=1.2.1",
    "sentry-sdk>=2.43.0",
    "uvicorn>=0.38.0",
]
