[tool.poetry]
name = "elt"
version = "0.1.0"
description = ""
authors = ["Raphael Paul Laude <raphlaude@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.0"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"
requests = "^2.31.0"
jinja2 = "^3.1.3"
thefuzz = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
